﻿1.1.0
-----

1.0.1
-----
1. Dont display Jamendo and Magnatune cache settings in config dialog if these
   have been disabled at build time.
2. Correctly calculate size of cache folders when folder does not exist.
3. Fix deletion of cache when single item selected.

1.0.0
-----
  1. Give tooltips to view actions.
  2. Add 'Set Album Artist from Artist' action to tag editor.
  3. Add option to specify max cover size when transfering to device.
  4. Remove 'Small Control Buttons' and 'Small Playback Buttons' options.
  5. Prompt before disconnecting a device.
  6. For playqueue items, if we only have a filename, and no artist, etc, then
     attempt to ascertain artist, album, title, and track number from the
     filename. These will be extracted if the filename has the following
     pattern; "%artist%/%album%/%track% %title%" Otherwise, if we cannot extract
     all of these, just set the title to the filename without path.
  7. Allow editing of tags, and replaygain calculation, of files from folder
     view which do not contain tags.
  8. Merge 'External Settings' into 'Interface Settings'
  9. Add option to embed covers when copying songs to devices. (ID3v2, mp4,
     and vorbis comment tag types only) 
 10. Add a simple system dbus helper to allow user mounts of samba shares. This
     is intended to allow Cantata to connect to an Android device via Droid NAS.
     Requires cantata be built with remote device support.
 11. Add first-run wizard to enable basic configuration before Cantata is
     started for the first time.
 12. Add a 'Cache' page to settings dialog, allowing cache usage to be displayed
     and cache items deleted.
 13. Move group warning to last stage of intial settings wizard.
 14. Basic cover fetching dialog, allowing to change downloaded cover. Currently
     Last.fm, Google, Discogs, and CoverArtArchive are used to find images. To
     enable searching via Amazon, you need to obtain an 'access key' and a